# xiaohongshu

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  SCHEMA.md  SKILL.md  docker-compose.yml  pyproject.toml  setup.bat  setup.sh
.github/workflows/: publish.yml
docker/: README.md  docker-compose.yml
docs/: PLAN.md  cli-guide.md
mcp/: start.bat  start.sh
scripts/: cdp_publish.py  chrome_launcher.py  publish_pipeline.py
src/xhs_cli/: __init__.py  main.py
src/xhs_cli/api/: server.py
src/xhs_cli/commands/: api_cmd.py  auth.py  config_cmd.py  init.py  interact.py  profile.py  publish.py  search.py  server.py
src/xhs_cli/engines/: cdp_client.py  docker_engine.py  mcp_binary.py  mcp_client.py
src/xhs_cli/utils/: config.py  envelope.py  export.py  index_cache.py  output.py
tests/: test_index_cache.py
